--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </div>
     </footer>
   </main>
-  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+  <script src="./js/vue2.js"></script>
   <script src="./js/app.js"></script>
 </body>
 </html>
